--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                     <img class="Ideas-img" src="./images/IMAGE (9).png" alt="edd">
                     <ul class="ideas-list">
                         <li class="Ideas-item"><h3 class="ideas-list-tex">We Make It Easy To Find The Great Design Talent, Easier...</h3></li>
-                        <li class="Ideas-item"><h3 class="ideas-list-tex">We Make It Easy To Find The Great Design Talent, Easier...</h3></li>
-                        <li class="Ideas-item"><h3 class="ideas-list-tex">We Make It Easy To Find The Great Design Talent, Easier...</h3></li>
+                        <li class="Ideas-item"><h3 class="ideas-list-tex">Road Design Handbook For The International Road...</h3></li>
+                        <li class="Ideas-item"><h3 class="ideas-list-tex">The Best Kept Secrets About Creative People</h3></li>
                         <li class="Ideas-item"><h3 class="ideas-list-tex">We Make It Easy To Find The Great Design Talent, Easier...</h3></li>
                     </ul>
                 </div>
